<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditSpaceActivity"
    tools:showIn="@layout/activity_edit_space">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_area_title"
        android:text="@string/edit_area_title"
        android:textAlignment="center"
        android:textSize="46dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/coordinate_display"
        android:textAlignment="center"
        android:textSize="24dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/add_area_title" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_field"
        android:textAlignment="center"
        android:textSize="32dp"
        android:hint="@string/prompt_name"
        android:maxLines="1"
        android:maxLength="64"
        app:layout_constraintTop_toBottomOf="@id/coordinate_display"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description_field"
        android:textAlignment="center"
        android:textSize="24dp"
        android:maxLength="512"
        android:hint="@string/prompt_description"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/name_field"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_area_add"
        android:text="@string/accept"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/delete_area_add"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/delete_area_add"
        android:text="@string/delete"
        android:layout_marginBottom="128dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>