<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Study Spaces">
        <menu>
            <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/heart_filled"
                android:title="@string/favorites" />
        </menu>
    </item>

    <item android:title="@string/manage_account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_media_stop_light"
                android:title="@string/action_logout"/>
        </menu>
    </item>

</menu>
