<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SpaceInfoFragment"
    android:background="#FFFFFF"
    >

    <Button
        android:id="@+id/infoExitButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/xicon"
        />

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/spaceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".SpaceInfoFragment"
        android:text="@string/currTitle"
        />


    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/spaceDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".SpaceInfoFragment"
        android:text="@string/currDesc"
        />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".SpaceInfoFragment"
        android:background="#FFFFFF"
        >

        <Button
            android:id="@+id/editButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/edit"
            />



        <Button
            android:id="@+id/favoriteButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/heart_unfilled"
            />

        <Button
            android:id="@+id/upvoteButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/up_arrow"
            />

        <Button
            android:id="@+id/downvoteButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/down_arrow"
            />
    </LinearLayout>





</LinearLayout>